package pt.leo.bridge.colours;

public class Blue implements Colour {

    @Override
    public String getName() {
        return "blue";
    }
}
