package pt.leo.bridge.colours;

public interface Colour {
    String getName();
}
