package pt.leo.bridge.colours;

public class Green implements Colour {

    @Override
    public String getName() {
        return "green";
    }
}
