package pt.leo.bridge.colours;

public class Red implements Colour {

    @Override
    public String getName() {
        return "red";
    }
}
